--- a/user.template.html
+++ b/user.template.html
@@ -11,7 +11,9 @@
     <script type="text/javascript"
             src="https://webapi.amap.com/maps?v=1.4.8&key=9aab6b6fff994d6e7d3f187cf5422fd6"></script>
     <script type="text/javascript" src="http://api.map.baidu.com/api?v=2.0&ak=hM0DAtFlbxFqHGshKkhpllU91ce0wgZW"></script>
-    <link rel=manifest href=/manifest.json>
+    <!--<link rel=manifest href=/manifest.json>-->
+
+
 </head>
 <body>
 <noscript>
